; ModuleID = '/home/carl/AnghaBench/openssl/crypto/rand/extr_rand_lib.c_rand_bytes_ex.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/rand/extr_rand_lib.c_rand_bytes_ex.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 (i8*, i32)* }

@RAND_F_RAND_BYTES_EX = common dso_local global i32 0, align 4
@RAND_R_FUNC_NOT_IMPLEMENTED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @rand_bytes_ex(i32* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca %struct.TYPE_4__*, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %11 = call %struct.TYPE_4__* (...) @RAND_get_rand_method()
  store %struct.TYPE_4__* %11, %struct.TYPE_4__** %10, align 8
  %12 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %13 = call %struct.TYPE_4__* (...) @RAND_OpenSSL()
  %14 = icmp ne %struct.TYPE_4__* %12, %13
  br i1 %14, label %15, label %31

15:                                               ; preds = %3
  %16 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %16, i32 0, i32 0
  %18 = load i32 (i8*, i32)*, i32 (i8*, i32)** %17, align 8
  %19 = icmp ne i32 (i8*, i32)* %18, null
  br i1 %19, label %20, label %27

20:                                               ; preds = %15
  %21 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %22 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %21, i32 0, i32 0
  %23 = load i32 (i8*, i32)*, i32 (i8*, i32)** %22, align 8
  %24 = load i8*, i8** %6, align 8
  %25 = load i32, i32* %7, align 4
  %26 = call i32 %23(i8* %24, i32 %25)
  store i32 %26, i32* %4, align 4
  br label %43

27:                                               ; preds = %15
  %28 = load i32, i32* @RAND_F_RAND_BYTES_EX, align 4
  %29 = load i32, i32* @RAND_R_FUNC_NOT_IMPLEMENTED, align 4
  %30 = call i32 @RANDerr(i32 %28, i32 %29)
  store i32 -1, i32* %4, align 4
  br label %43

31:                                               ; preds = %3
  %32 = load i32*, i32** %5, align 8
  %33 = call i32* @OPENSSL_CTX_get0_public_drbg(i32* %32)
  store i32* %33, i32** %8, align 8
  %34 = load i32*, i32** %8, align 8
  %35 = icmp eq i32* %34, null
  br i1 %35, label %36, label %37

36:                                               ; preds = %31
  store i32 0, i32* %4, align 4
  br label %43

37:                                               ; preds = %31
  %38 = load i32*, i32** %8, align 8
  %39 = load i8*, i8** %6, align 8
  %40 = load i32, i32* %7, align 4
  %41 = call i32 @RAND_DRBG_bytes(i32* %38, i8* %39, i32 %40)
  store i32 %41, i32* %9, align 4
  %42 = load i32, i32* %9, align 4
  store i32 %42, i32* %4, align 4
  br label %43

43:                                               ; preds = %37, %36, %27, %20
  %44 = load i32, i32* %4, align 4
  ret i32 %44
}

declare dso_local %struct.TYPE_4__* @RAND_get_rand_method(...) #1

declare dso_local %struct.TYPE_4__* @RAND_OpenSSL(...) #1

declare dso_local i32 @RANDerr(i32, i32) #1

declare dso_local i32* @OPENSSL_CTX_get0_public_drbg(i32*) #1

declare dso_local i32 @RAND_DRBG_bytes(i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
